tooling/nargo_cli/tests/snapshots/execution_failure/unused_vector_get_known_index_out_of_bounds/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:3:13
  │
3 │     let _ = vector[10]; // Index out of bounds
  │             ---------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:3:13

Aborting due to 1 previous error
