tooling/nargo_cli/tests/snapshots/execution_failure/unused_vector_get_known_index_out_of_bounds/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:13
  │
3 │     let _ = vector[10]; // Index out of bounds
  │             ----------
  │
  = Call stack:
    1. src/main.nr:3:13

Failed assertion
